k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: s4-app
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: s4-app
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: s4-app
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173
  type: ClusterIP
