k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s4-ingress
  namespace: s4-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: s4.ssei
      http:
        paths:
          - path: /client
            pathType: prefix
            backend:
              service:
                name: client-service
                port:
                  number: 4173
          - path: /server
            pathType: prefix
            backend:
              service:
                name: server-service
                port:
                  number: 3000
